Release notes for Agora-Moodle2 (http://agora.xtec.cat)

More information on each of the fixes can be found in the project
development home at https://github.com/projectestac/agora_moodle2

Changes 16.09.07
---------------------------------------------------------------------------------------
- Updated LangPacks
- Updated mod/journal
- Updated auth/googleoauth2 to fix problems with login button (Trello #1321)
- mod/questionnaire: Fixed bug with CSV export (Trello #1322)
- gradelib: Fixed infinite loop "Recalculating grades" - MDL-55707  (Trello #1324)
- Applied path to avoid "Cannot find session record xxxxxxxxxxxxx for user Z, creating new session"
- report/coursequotas: Added filemanager (Trello #1278)


Changes 16.08.22
---------------------------------------------------------------------------------------
- Moodle upgraded to from 3.1.1 (Trello #1268)
- Updated LangPacks
- Updated auth/googleoauth2
- Updated blocks/progress
- Updated local/mobile
- Updated mod/choicegroup
- Updated mod/geogebra
- Updated mod/hotpot
- Updated mod/jclic
- Updated mod/journal
- Updated mod/questionnaire
- Updated mod/qv
- Updated all related wiris plugins


Changes 16.05.03
---------------------------------------------------------------------------------------
- Moodle upgraded to from 2.8.12 (Trello #1213)
- Updated local_mobile to 2.8.310
- Updated mod/questionaire
- Updated local/oauth
- local_agora: Changed default exceptionerror to avoid error in admin pages when datadir is not writable
- Zipped old log cron and mailer files until they will be deleted (Trello #1234)
- Updated mod/hotpot
- Added Quiz access rules: Offline attempts access rule to enable offline quizzes from the app


Changes 16.05.03
---------------------------------------------------------------------------------------
- Added support to split data folders if necessary (Trello #1230)


Changes 16.03.14
---------------------------------------------------------------------------------------
- Updated LangPacks