@@ -3,6 +3,11 @@ Release notes for Agora-Moodle2 (http://agora.xtec.cat)
 More information on each of the fixes can be found in the project
 development home at https://github.com/projectestac/agora_moodle2
 
+Changes in progress
+---------------------------------------------------------------------------------------
+- RSS: Fixed bug to show feed name when preferred is not specified - MDL-55886 (Trello #1338)
+
+
 Changes 16.09.07
 ---------------------------------------------------------------------------------------
 - Updated LangPacks
